--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pinia": "^2.0.30",
     "sass": "^1.57.1",
     "vue": "^3.2.37",
+    "vue-clipboard3": "^2.0.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
