--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sass": "^1.57.1",
     "vue": "^3.2.37",
     "vue-clipboard3": "^2.0.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "next"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
