--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.57.1",
     "vue": "^3.2.37",
     "vue-clipboard3": "^2.0.0",
+    "vue-cropper": "^1.1.3",
     "vue-router": "^4.1.6",
     "vuedraggable": "next"
   },
